--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Design your taco!</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
-<form method="POST" th:object="${design}">
+<form method="POST" th:object="${taco}">
     <div class="grid">
         <div class="ingredient-group" id="wraps">
             <h3>Designate your wrap:</h3>
@@ -49,6 +49,7 @@
     </div>
     <div><h3>Name your taco creation:</h3>
         <input type="text" th:field="*{name}"/>
+        <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
         <br/>
         <button>Submit your taco</button>
     </div>
